# cpplox

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  expression.md  statement.md
src/: AstPrinter.hpp  Environment.hpp  EnvironmentPrinter.cpp  EnvironmentPrinter.h  Expr.hpp  Interpreter.cpp  Interpreter.h  Interpreter.hpp  LoxCallable.h  LoxCallable.hpp  LoxClass.cpp  LoxClass.h  LoxFunction.cpp  LoxFunction.h  LoxInstance.cpp  LoxInstance.h  NativeFunctions.hpp  Parser.hpp  Resolver.hpp  Scanner.cpp  Scanner.h  Stmt.hpp  Token.cpp  Token.h  dataStruct.hpp  error.cpp  error.h  expr.hpp  lox.cpp  test_expr.cpp
